# advent_of_code

./: .gitignore
2021/: five.hs  four.hs  one.hs  one_b.hs  six.hs  three.hs  two.hs  two_b.hs
2023/1/: combined.hs
2023/2/: combined.hs
2023/3/: one.hs  two.hs
2023/4/: combined.hs  one.hs  x4.cabal
2023/5/: one.hs  x.cabal
2023/6/: aoc.cabal  one.hs  two.hs
2023/8/: aoc.cabal  combined.hs  problem.txt
2024/1/: solution.hs
2024/11/: solution.hs
2024/2/: solution.hs
2024/3/: example.txt  note  solution.hs
2024/4/: one.hs  two.hs
2024/5/: solution.hs
2024/7/: solution.hs
2024/9/: solution.hs
