cabal-version:      2.4
name:               x4
version:            0.1.0.0

executable x4
    main-is:          one.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        from-sum,
        parsec,
        unordered-containers
    hs-source-dirs:   .
    default-language: Haskell2010
